@@ -40,8 +40,12 @@ void NTriangulation::calculateSkeleton() const {
     orientable = true;
     standard = true;
 
+#if 0
     checkPermutations();
-        // Sets valid to false
+        // Sets valid to false if gluings are mismatched (which should
+        // never happen if the NTetrahedron gluing routines have been
+        // used correctly)
+#endif
 
     calculateComponents();
         // Sets components, orientable, NComponent.orientable,
@@ -67,36 +71,33 @@ void NTriangulation::calculateSkeleton() const {
 void NTriangulation::checkPermutations() const {
     TetrahedronIterator it;
 
-    for(it = tetrahedra.begin(); it != tetrahedra.end(); it++)
-        for(int face = 0; face < 4; face++) {
-            
+    for (it = tetrahedra.begin(); it != tetrahedra.end(); it++)
+        for (int face = 0; face < 4; face++) {
             NTetrahedron * adjacent = (*it) -> adjacentTetrahedron(face);
-            
-            if(adjacent) {
+
+            if (adjacent) {
                 NPerm4 perm = (*it) -> adjacentGluing(face);
 
                 NPerm4 adj_perm = adjacent -> adjacentGluing(perm[face]);
 
-                if(!(perm*adj_perm).isIdentity())
-                {
+                if (!(perm*adj_perm).isIdentity()) {
                     valid = false;
 
                     // This printing statement is temporary code 
                     // to be removed once enough people have tested it
-                    std::cout << "permutations of adjacent faces do not match"
-                              << " in skeleton.cpp" << std::endl;
+                    std::cerr << "ERROR: Permutations of adjacent faces "
+                                 "do not match in skeleton.cpp" << std::endl;
                 }
 
-                if((*it) != adjacent -> adjacentTetrahedron(perm[face]))
-                {
+                if ((*it) != adjacent -> adjacentTetrahedron(perm[face])) {
                     valid = false;
 
                     // This printing statement is temporary code 
                     // to be removed once enough people have tested it
-                    std::cout << "adjacency relations do not match"
-                              << " in skeleton.cpp" << std::endl;
+                    std::cerr << "ERROR: Adjacency relations do not match"
+                                 " in skeleton.cpp" << std::endl;
                 }
-            }   
+            }
         }
 }
 
